@@ -3,6 +3,7 @@ Cacti CHANGELOG
 -bug#0001085: LDAP enabled status not maintained on upgrade from 0.8.6j to 0.8.7
 -bug#0001100: spine hangs on unreachable hosts
 -bug#0001105: add_graphs.php --list-snmp-values for all available host snmp-fields
+-bug#0001145: Save Failed error when changing Graph Details
 -bug#0001160: In Suggested Values editor, name and field are reversed. Include column headers
 -bug#0001166: Installer does not properly handle disabled guest_user conversion
 -bug#0001182: Subdirectories are not secure and allow browsing
